cfn_benchmark/cfn_templates/walkerpr__aws_kubernetes_infrastructure_with_central_services/common/files/cloudFormationTemplates/Deployment/childTemplates/upstream/sampleDeploymentUPEC2.yaml
AWSTemplateFormatVersion: 2010-09-09
Parameters:
  pLaunchTemplateId:
    Type: String
  pLaunchTemplateVer:
    Type: String
  pSampleEnv:
    Type: String
    Description: Production? Test?
    AllowedValues:
      - prod
      - test
  pEc2DailyStop:
    Type: String
    Description: Do you want the EC2 resources to stop automatically Monday-Friday at 10PM EST, 7PM PST?
    AllowedValues:
      - "true"
      - "false"
  pEc2DailyStart:
    Type: String
    Description: Do you want the EC2 resources to stop automatically Monday-Friday at 4AM EST, 1AM PST?
    AllowedValues:
      - "true"
      - "false"
  pEnvironment:
    Type: String
    Description: Development? Test Upstream? Prod Upstream?
    AllowedValues:
      - dev
      - upprod
      - uptest
  pDeploymentNumber:
    ConstraintDescription: "The number of the deployment."
    MinValue: 0
    MaxValue: 20
    Description: "The number of the deployment."
    Type: Number
  pHostedZoneId:
    Type: String
  pDomain:
    Description: The domain representing the environment (ex. sample.sample.dev or sample.sample.dev)
    Type: String
    AllowedValues:
      - sample
      - sample
  pVpcId:
    Description: The VPC-scoped resources will belong to this VPC.
    Type: AWS::EC2::VPC::Id
  pUPInstanceType:
    Description: EC2 instance type
    Type: String
    AllowedValues:
      - c4.xlarge
      - c4.2xlarge
      - c4.4xlarge
      - c5.large
      - c5.xlarge
      - c5.2xlarge
      - c5.4xlarge
      - c5n.large
      - c5n.xlarge
      - c5n.2xlarge
      - c5n.4xlarge
      - c6i.large
      - c6i.xlarge
      - c6in.2xlarge
      - c6in.4xlarge
      - m4.large
      - m4.xlarge
      - m4.2xlarge
      - m4.4xlarge
      - m5.large
      - m5.xlarge
      - m5.2xlarge
      - m5.4xlarge
      - m5n.large
      - m5n.xlarge
      - m5n.2xlarge
      - m5n.4xlarge
      - m6i.xlarge
      - r4.large
      - r4.xlarge
      - r5.large
      - r5.xlarge
      - r6i.xlarge
      - r6i.2xlarge
      - r6i.4xlarge
      - r6i.8xlarge
      - r6i.12xlarge
      - r6in.xlarge
      - r6in.2xlarge
      - r6in.4xlarge
      - r6in.8xlarge
      - r6in.12xlarge
      - r7i.large
      - r7i.xlarge
      - t2.small (Testing / Not for Production Use)
      - t2.medium
      - t2.large
      - t3.small (Testing / Not for Production Use)
      - t3.medium
      - t3.large
      - t3.xlarge
      - t3.2xlarge
      - t3a.medium
    ConstraintDescription: Please choose a valid EC2 instance type
  pVpcPrefix:
    Description: Prefix for VPC.
    Type: String
  pCentralServicesSubnetPrefix:
    Description: Prefix for Central Services Subnet.
    Type: String
Conditions:
  Upstream: !Or
    - !Equals
      - upprod
      - !Ref pEnvironment
    - !Equals
      - uptest
      - !Ref pEnvironment
  TAFDeployment: !Equals
    - 3
    - !Ref pDeploymentNumber
Resources:
  appEC2HostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          SourcePrefixListId: !Ref pCentralServicesSubnetPrefix
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Ref pVpcPrefix

  appEC2Host:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref pLaunchTemplateId
        Version: !Ref pLaunchTemplateVer
      InstanceType: !Ref pUPInstanceType
      KeyName: !Sub "{{resolve:ssm:/sample/ec2/sample-deployment-${pDeploymentNumber}/ec2/default-key/name}}"
      SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-deployment-${pDeploymentNumber}-subnet-0/id}}"
      SecurityGroupIds:
        - Ref: appEC2HostSecurityGroup
      Tags:
        - Key: "deploymentType"
          Value: sampleDeployment
        - Key: "deploymentEnvironment"
          Value: !Ref pEnvironment
        - Key: "sampleDeploymentNumber"
          Value: !Ref pDeploymentNumber
        - Key: Name
          Value: !Sub "app.${pDeploymentNumber}.upstream.${pEnvironment}.${pDomain}.dev"
  appEC2HostRoute53Record:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref pHostedZoneId
      Name: !Sub "app.${pDeploymentNumber}.upstream.${pEnvironment}.${pDomain}.dev"
      ResourceRecords:
        - !GetAtt appEC2Host.PrivateIp
      TTL: 900
      Type: A
  secEC2HostSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: "Enable access from devices within the VPC"
      VpcId: !Ref pVpcId
      SecurityGroupIngress:
        - IpProtocol: -1
          SourcePrefixListId: !Ref pCentralServicesSubnetPrefix
        - IpProtocol: tcp
          FromPort: "443"
          ToPort: "443"
          SourcePrefixListId: !Ref pVpcPrefix
  secEC2Host:
    Type: AWS::EC2::Instance
    Properties:
      LaunchTemplate:
        LaunchTemplateId: !Ref pLaunchTemplateId
        Version: !Ref pLaunchTemplateVer
      InstanceType: !Ref pUPInstanceType
      KeyName: !Sub "{{resolve:ssm:/sample/ec2/sample-deployment-${pDeploymentNumber}/ec2/default-key/name}}"
      SubnetId: !Sub "{{resolve:ssm:/sample/vpc/sample-${pEnvironment}-${pSampleEnv}-vpc/sample-deployment-${pDeploymentNumber}-subnet-0/id}}"
      SecurityGroupIds:
        - Ref: secEC2HostSecurityGroup
      Tags:
        - Key: "deploymentType"
          Value: sampleDeployment
        - Key: "deploymentEnvironment"
          Value: !Ref pEnvironment
        - Key: "sampleDeploymentNumber"
          Value: !Ref pDeploymentNumber
        - Key: Name
          Value: !Sub "sec.${pDeploymentNumber}.upstream.${pEnvironment}.${pDomain}.dev"
  secEC2HostRoute53Record:
    Type: AWS::Route53::RecordSet
    Properties:
      HostedZoneId: !Ref pHostedZoneId
      Name: !Sub "sec.${pDeploymentNumber}.upstream.${pEnvironment}.${pDomain}.dev"
      ResourceRecords:
        - !GetAtt secEC2Host.PrivateIp
      TTL: 900
      Type: A
  appEC2HostRegisterTarget:
    Condition: Upstream
    Type: Custom::NLBRegister
    Properties:
      ServiceTimeout: 300
      ServiceToken: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/registernlbiptargetslambda/arn}}"
      TargetArn: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elbUPAPPelbtargetgroup/arn}}"
      TargetIp: !GetAtt appEC2Host.PrivateIp
  secEC2HostRegisterTarget:
    Condition: Upstream
    Type: Custom::NLBRegister
    Properties:
      ServiceTimeout: 300
      ServiceToken: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/registernlbiptargetslambda/arn}}"
      TargetArn: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/UPSECelbtargetgroup/arn}}"
      TargetIp: !GetAtt secEC2Host.PrivateIp
  appEC2HostRegisterTargetTAF:
    Condition: TAFDeployment
    Type: Custom::NLBRegister
    Properties:
      ServiceTimeout: 300
      ServiceToken: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/registernlbiptargetslambda/arn}}"
      TargetArn: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/UPAppELBTAFtargetgroup/arn}}"
      TargetIp: !GetAtt appEC2Host.PrivateIp
  secEC2HostRegisterTargetTAF:
    Condition: TAFDeployment
    Type: Custom::NLBRegister
    Properties:
      ServiceTimeout: 300
      ServiceToken: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/registernlbiptargetslambda/arn}}"
      TargetArn: !Sub "{{resolve:ssm:/sample/lambda/sample-central-services/elb/UPSecELBTAFtargetgroup/arn}}"
      TargetIp: !GetAtt secEC2Host.PrivateIp
  appEC2HostSecurityGroupUpstream:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: Upstream
    Properties:
      GroupId: !GetAtt appEC2HostSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"
      SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/prod/prefix/dev/id}}"
  secEC2HostSecurityGroupUpstream:
    Type: AWS::EC2::SecurityGroupIngress
    Condition: Upstream
    Properties:
      GroupId: !GetAtt secEC2HostSecurityGroup.GroupId
      IpProtocol: tcp
      FromPort: "443"
      ToPort: "443"
      SourcePrefixListId: !Sub "{{resolve:ssm:/sample/vpc/prod/prefix/dev/id}}"
